--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
       type="image/x-icon"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="./TW-ELEMENTS-PATH/dist/js/index.min.js"></script>
     <title>Genius Car</title>
   </head>
   <body>
